# r-agents

./: .gitignore  Cargo.toml  LICENSE  README.md  agents.yaml  autogen.sh  config.yaml  tools.yaml
config/agents/weather/: config.yaml
config/rags/coder/: config.yaml
config/rags/demo/: config.yaml
config/tools/fso/: config.yaml
config/tools/web/: config.yaml  get_current_time.json
src/: lib.rs  main.rs
src/agents/coder/: config.yaml
src/agents/demo/: config.yaml
src/agents/weather/: config.yaml
src/common/: agent.rs  ask.rs  cli.rs  config.rs  core.rs  db.rs  download.rs  input.rs  load.rs  loader.rs  mod.rs  rag.rs  server.rs  session.rs  tool.rs
src/common/db/: db.rs
src/common/util/: loader.rs
src/config/agents/coder/: config.yaml
src/config/tools/fso/: config.yaml  fs_ls.json  fs_ls.sh
src/config/tools/web/: get_current_weather.json  get_current_weather.sh
src/inference/: api.rs  core.rs  instance.rs  mod.rs  params.rs
src/models/: llama.rs  mod.rs  qwen2.rs
src/rags/coder/: config.yaml
src/rags/demo/: config.yaml  file.txt
src/realtime/: abort.rs  editor.rs  highlighter.rs  mod.rs  prompt.rs  realtime.rs
src/serve/: route.rs  server.rs
src/tools/fs_cat/: fs_cat.json
src/tools/fs_ls/: fs_ls.json
src/tools/fs_mkdir/: fs_mkdir.json
src/tools/fso/: fs_cat.json  fs_mkdir.json
src/tools/get_current_time/: get_current_time.json  get_current_time.sh
src/tools/get_current_weather/: get_current_weather.json  get_current_weather.yaml
src/tools/web/: config.yaml
src/web/: index.rs
