[package]
name = "RllamaR"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
actix-web = "4"
actix-http = "3"
actix = "0.13"
log="0.4"
anyhow = "1"
serde = {version = "1", features = ["derive","rc"]}
serde_json = "1"
serde_yaml = "0.9.17"
tokio = { version = "1.34.0", features = ["full"] }
async-openai = "0.26.0"
futures = "0.3.30"
