[package]
name = "ragents"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
actix-web = "4"
actix-http = "3"
actix = "0.13"
log="0.4"
env_logger = "0.7"
anyhow = "1"
serde = {version = "1", features = ["derive","rc"]}
serde_json = "1"
serde_yaml = "0.9.17"
tokio = { version = "1.34.0", features = ["full"] }
async-openai = "0.26.0"
futures = "0.3.30"
reqwest = { version = "0.12.9", features = ["json", "blocking"]}
chromadb = { version = "1.1.0", features = ["openai"]}
pdf-extract = "0.7.12"
ureq = { version = "2.12.1", features = ["proxy-from-env", "socks-proxy"] }
tokenizers = { version = "0.21.0", features = ["http"]}
async-trait = "0.1.84"

[[bin]]
name = "chromadb"
path = "src/bin/chromadb.rs"

[[bin]]
name = "ragentsdb"
path = "src/bin/ragentsdb.rs"