[package]
name = "ragents"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
actix-web = "4"
actix-http = "3"
actix = "0.13"
log="0.4"
anyhow = "1"
serde = {version = "1", features = ["derive","rc"]}
serde_json = "1"
serde_yaml = "0.9.17"
tokio = { version = "1.34.0", features = ["full"] }
async-openai = "0.27.2"
futures = "0.3.30"
reqwest = { version = "0.12.9", features = ["json", "blocking"]}
chromadb = { version = "1.1.0", features = ["openai"]}
async-trait = "0.1.84"
reedline = "0.38.0"
lazy_static = "1.5.0"
async-recursion = "1.1.1"
fancy-regex = "0.14.0"
dirs = "6.0.0"
chrono = "0.4.39"
inquire = "0.7.5"
nu-ansi-term = "0.50.0"
parking_lot = "0.12.1"

[[bin]]
name = "chromadb"
path = "src/bin/chromadb.rs"

[[bin]]
name = "ragentsdb"
path = "src/bin/ragentsdb.rs"